Bug 331974 - [testcase] inline elements inserted in wrong position
Summary: [testcase] inline elements inserted in wrong position
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.12.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-10 14:54 UTC by Andrea Iacovitti
Modified: 2014-03-17 20:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.4
Sentry Crash Report:


Attachments
testcase (1.15 KB, text/html)
2014-03-10 14:54 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2014-03-10 14:54:25 UTC
Created attachment 85511 [details]
testcase

Load the attached self explanatory test case
Comment 1 Andrea Iacovitti 2014-03-10 15:04:53 UTC
Git commit 243bf904bafb43999543ccb405fd1afb2c48745d by Andrea Iacovitti.
Committed on 10/03/2014 at 15:01.
Pushed by aiacovitti into branch 'KDE/4.12'.

Use a local copy of beforeChild to iterate over parents.
Related: bug 291502, bug 204241
FIXED-IN: 4.12.4

M  +7    -4    khtml/rendering/render_flow.cpp
M  +1    -1    khtml/rendering/render_flow.h

http://commits.kde.org/kdelibs/243bf904bafb43999543ccb405fd1afb2c48745d
Comment 2 Andrea Iacovitti 2014-03-17 20:54:59 UTC
Git commit b100974e29f89faac9d8b604deb0be8c9665404a by Andrea Iacovitti.
Committed on 17/03/2014 at 20:49.
Pushed by aiacovitti into branch 'master'.

Use a local copy of beforeChild to iterate over parents.
Related: bug 291502, bug 204241
FIXED-IN: 4.12.4

(forwardport kdelibs commit 243bf90)

M  +7    -4    src/rendering/render_flow.cpp
M  +1    -1    src/rendering/render_flow.h

http://commits.kde.org/khtml/b100974e29f89faac9d8b604deb0be8c9665404a