Use a local copy of beforeChild to iterate over parents.

BUG: 331974
BUG: 291502
BUG: 204241
FIXED-IN: 4.12.4

(forwardport kdelibs commit 243bf90)