src/rendering/render_flow.h
@@ -60,7 +60,7 @@ public:
     {
         m_continuation = c;
     }
-    RenderFlow *continuationBefore(RenderObject *beforeChild);
+    RenderFlow *continuationBefore(const RenderObject *beforeChild);
 
     void addChildWithContinuation(RenderObject *newChild, RenderObject *beforeChild);
     virtual void addChildToFlow(RenderObject *newChild, RenderObject *beforeChild) = 0;
